--- a/ecmp.html
+++ b/ecmp.html
@@ -235,7 +235,7 @@
               # Created by: BuanaNETPBun.Github.io - fb.me/buananet.pbun<br>
               # Load Balancing Method: <span id="vpn-list-text-info" style="font-weight:bold;text-transform: uppercase">ECMP (Equal Cost Multi Path)</span><br>
               ###############################################################<br>
-              </span><br>
+              </span>
               <b>/ip firewall address-list</b><br>
               add address=192.168.0.0/16 list=LOCAL-IP comment="LB By BNT"<br>
               add address=172.16.0.0/12 list=LOCAL-IP comment="LB By BNT"<br>
