--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -16,7 +16,9 @@
     <meta property="og:url" content="https://buananetpbun.github.io/mikrotik-burst-limit-calculator.html">
     <script data-ad-client="ca-pub-9740800920365268" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script async defer src="https://buttons.github.io/buttons.js"></script>   
+	<link rel="stylesheet" href="./login/login.css">
     <style>
+
       /* -----------------------------------------------
       ##################################################
       # MikroTik Burst Limit Calculator
@@ -34,7 +36,7 @@
       width:100%;
       margin-top: 0px;
       padding:0;
-      line-height: 1.2;
+      line-height: normal;
       background: #292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat ;  color:#333;
       }
       * {
@@ -52,11 +54,11 @@
       text-decoration:none !important;
       }
       #wrap{
-      width:950px;
+      max-width:900px;
       margin:0 auto;
-      padding:10px;
-	  font-size:14px;
+      padding:0 5px 0 5px;
       }
+ .main-wrap{display:flex}	  
       .header{
       height:auto; 
       width:100%;
@@ -64,10 +66,10 @@
       margin-bottom:5px;
       border-top:1px solid #555;
       }
-       .main-sidebar{
+      .main-sidebar{
       float:left;
       width:50%;
-      height:470px;
+      height:490px;
       padding: 10px; 
       padding-left:15px;
       padding-top:10px;
@@ -80,7 +82,7 @@
       .content{
       float:right;
       width:50%;
-      height:470px;
+      height:490px;
       padding: 10px;
       padding-left:5px;
       padding-right:15px;
@@ -146,6 +148,8 @@
       cursor: pointer;
       border-radius: 5px;
       color: #fff;
+	  margin-top:5px;
+	  margin-bottom:5px;
       }
       button:hover {
       background-color: #ccc;
@@ -190,7 +194,7 @@
       clear: both;
       }
       .list-output-content {
-      height: 408px;
+      height: auto;
       background:#fff;
       overflow: auto;
       overflow-x: auto;
@@ -207,50 +211,105 @@
       border-collapse: collapse;
       width: 100%;
 	  font-size:14px;
+	  height:auto;
       }
       td, th {
       border: 1px solid #dddddd;
       text-align: left;
       padding: 8px;
       }
+	  .formula {margin-top:35px}
+       .mikrotik-logo{display:none}
+      @media screen and (max-width:800px) {
+	  .main-sidebar, .content{height: auto;}
+}	  
+      @media screen and (max-width:700px) {
+	  .formula {margin:10px;margin-top:20px}
+      .list-output-content{height:auto}
+      .main-wrap{display:block}
+      .main-sidebar, .content{border-radius:5px;display:block;width:100%; height: auto; padding:0px}
+      .main-sidebar{height:auto;margin-bottom:5px}
+      .sidebar, .sidebar2, .content {padding:10px}  
+      .header h1{max-width:100%;justify-content:center}
+      .header{border:none}
+      .logo-left a{margin-top:10px!important;font-size:23px}
+      .logo-left img{height:40px;width:50px;margin-top:-5px!important}
+      h1{font-size:21px;text-align:center}
+      .mymenu{width:100%!important}
+      .logo{width:100%}
+      .logo-left{justify-content:center;display:flex;width:100%}
+      .logo-right{justify-content:center;width:100%;display:flex}
+      .footer{font-size:13px;padding-left:5px;padding-right:5px}
+      }
+      @media screen and (max-width:600px) {
+      button{margin-bottom:5px}
+      h1{font-size:19px}
+      .logo-left a{margin-top:10px!important;font-size:20px}
+      .logo-left img{height:auto;width:40px;margin-top:-5px!important}
+      .sidebar{padding:10px}
+      .mikrotik-logo{display:flex;justify-content:center;margin-top:15px}
+      .show-homepage-menu{display:flex;justify-content:center;width:100%;clear:both}
+      .mymenu{padding-left:0;padding-right:0}
+      .mymenu ul{background:none!important;justify-content:center;display:flex}
+      }
+      @media screen and (max-width:500px) {
+      .show-homepage-menu{display:flex;justify-content:center;width:100%}
+      .avatar{display:none}
+      }
+      @media screen and (max-width:350px) {
+      .hide-homepage{display:none}
+      }   
     </style>
-    <link rel="stylesheet" href="./login/login.css">
+    
   </head>
   <body>
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-auth.js"></script> 
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v12.0&appId=379827522913428&autoLogAppEvents=1" nonce="Esvux9Cl"></script>
-    <div id="mymenu" class="mymenu">
+    <div id="wrap">
+   <div id="mymenu" class="mymenu">
+      <div class="mikrotik-logo" >
+        <img alt="mikrotik" src="./img/made-for-mikrotik.png">
+      </div>
       <ul>
         <li><a target="_blank" href="https://buananetpbun.github.io">HOME</a></li>
         <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
         <li><a href="javascript:callmodal()">DONATE</a></li>
-        <li><a target="_blank" href="https://fb.me/buananetmikrotik">CONTACT</a></li>
+        <li><a target="_blank" href="https://fb.me/buananet.pbun">CONTACT</a></li>
       </ul>
-      <div id="homepage" class="hide">
-        <button style="width:100px !important; padding:6px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
-		<button id="ShowProfile" style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px;" onclick="location.href = 'https://buananetpbun.github.io/login'">My Profile</button>
-        <span class="avatar">
+      <div class="show-homepage-menu">
+        <div id="homepage" class="hide">
+          <button style="width:90px !important; padding:6px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
+          <button id="ShowProfile" style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px;" onclick="location.href = 'https://buananetpbun.github.io/login'">My Profile</button>
+          <span class="hide-homepage">
+          <span class="avatar">
           <img alt="avatar" id="myavatar" src="https://user-images.githubusercontent.com/42666125/199234814-c320e1fc-da95-489e-a955-43b82e3f4b46.png" >
-         </span>		
-        <span style="font-weight:normal;font-size:14px">Hi, <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
-        <span style="font-weight:normal; font-size:14px"> [<span id="email_Verified" title="E-mail verified status" style="cursor: help;"></span>]</span>
+          </span>		
+          <span style="font-weight:normal;font-size:14px">Hi, <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
+          <span style="font-weight:normal; font-size:14px"> [<span id="email_Verified" title="E-mail verified status" style="cursor: help;"></span>]</span>
+          </span>
+        </div>
       </div>
     </div>
-    <div id="wrap">
       <div class="logo">
-        <a href="https://buananetpbun.github.io/mikrotik-burst-limit-calculator.html"><img alt="BuanaNET" style="float:left; margin-top:-10px;margin-right:10px" height="40" width="50" src="./img/mylogo.png"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a> 
-        <div style="float:right">
-          <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
+        <div class="logo-right" style="float:right;">
+          <div style="float:right">
+            <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
+          </div>
+          <div style="float:right; margin-right:5px; margin-top:1px">
+            <div  class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
+          </div>
         </div>
-        <div style="float:right; margin-right:5px; margin-top:3px">
-          <div  class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
+        <div class="logo-left" style="float:left;"> 
+          <a href="https://buananetpbun.github.io/mikrotik-burst-limit-calculator.html"><img style="float:left; margin-top:-6px;margin-right:10px" height="40" width="50" src="./img/mylogo.png"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a>  
         </div>
       </div>
+      <div style="clear:both"></div>
       <div class="header">
         <h1>MIKROTIK <span style="color:#ff6600">BURST LIMIT</span> CALCULATOR FOR ROUTER-OS</h1>
       </div>
+	  <div class="main-wrap">     
       <div class="main-sidebar">	  
       <div class="sidebar">
         <div style="float:left; width:100%;">
@@ -303,16 +362,18 @@
         </div>
       </div>
         <div style="clear:both"></div>
-        <div style="border-radius:5px; background-color:#ccc;padding:10px; margin-top:32px;font-size:12px; font-weight:700;">
+        <div class="formula">
+		<div style="border-radius:5px; background-color:#ccc;padding:10px; font-size:12px; font-weight:700;">
           <span style="font-size:12px"><b>Actual Burst Time Formula:</b></span><br>
-          <div style='color: #555; margin-bottom:3px'>------------------------------------------------------------------------------</div>
+          <div style='color: #555; margin-bottom:3px'>---------------------------------------------------------------------</div>
           <span style='color: Crimson'>Actual Burst Time</span> = <span style='color: #191970'>Burst Threshold</span> * <span style='color: DarkViolet'>Burst Time</span> / <span style='color: #01A3DF'>Burst Limit</span><br>
-          <div style='color: #555'>------------------------------------------------------------------------------</div>
+          <div style='color: #555'>---------------------------------------------------------------------</div>
           <div style="margin-top:5px; font-weight:normal">
             <span style='color: #555; font-size:11px'>Burst Threshold = Max Limit * 3/4</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style='text-align:right;color: #555; font-size:11px'>K = Kbps  /  M = Mbps</span><br>
             <span style='color: #555; font-size:11px'>Limit At = Max Limit * 1/2</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style='color: #555; font-size:11px'>Convert 1000Kbps = 1Mbps</span><br>
           </div>
-        </div>	  
+        </div>	
+</div>		
 	  </div>
       <div class="content">
         <span style="margin-left:2px;font-size:14px"><b>COPY PASTE BURST RESULT TO SIMPLE QUEUE OR QUEUE TREE</b></span>
@@ -377,6 +438,7 @@
           </table>
         </div>
       </div>
+	  </div>
       <div class="footer">
         <div style="text-align:center">
           © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
