--- a/mikrotik-username-password-hotspot-generator.html
+++ b/mikrotik-username-password-hotspot-generator.html
@@ -46,8 +46,7 @@
       a:visited{color:#f60}
       a:hover{color:#f60}
       a:active{color:#f60}
-      .menu2 a:visited{text-decoration:none;color:#fff}
-      button{color:#fff;background-color:#f60;border-color:#f60;border:none;padding:8px;margin-right:5px;width:120px;font-size:14px;font-weight:700;cursor:pointer;border-radius:5px;color:#fff}
+      .menu2 a:visited{text-decoration:none;color:#fff}      button{color:#fff;background-color:#f60;border-color:#f60;border:none;padding:7px;margin-right:5px;width:113px;font-size:14px;font-weight:700;cursor:pointer;border-radius:5px;color:#fff}
       button:hover{background-color:#ccc;color:#111}
       .row:after{content:"";display:table;clear:both}
       input[type=checkbox]{margin-right:7px}
