--- a/mikrotik-username-password-hotspot-generator.html
+++ b/mikrotik-username-password-hotspot-generator.html
@@ -167,7 +167,7 @@
           <div style="clear: both;"></div>
         </div>
         <div class="content">
-          <span style="margin-left:2px">Copy-Paste the Script to the Terminal</span>
+          <span style="margin-left:2px">Copy-Paste the Script to the Terminal.</span>
           <div class="list-output-content">
             <div id="showScript">
               <span style="color:#ff6600;">
@@ -183,7 +183,7 @@
           <br>
           <button style="margin-top:0px" id="copyscript" type="button" onclick="selectElementContents(document.getElementById('showScript'))">Copy Script</button>
           <button type="button" value="Open window" onclick="printvoucher()">Print Voucher</button>
-          <span style="margin-bottom:15px; margin-top:0px;padding-left:10px; font-weight:700; font-size:14px" class="d-link"><a class="download" href="#" download="user.rsc">Download user.rsc</a></span><br>
+          <span style="margin-bottom:15px; margin-top:0px;padding-left:7px; font-weight:700; font-size:14px" class="d-link"><a class="download" href="#" download="user.rsc">Download user.rsc</a></span><br>
         </div>
       </div>
       <div class="footer">
