--- a/mikrotik-port-static-routing.html
+++ b/mikrotik-port-static-routing.html
@@ -15,8 +15,10 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://buananetpbun.github.io/mikrotik-port-static-routing.html">
     <script data-ad-client="ca-pub-9740800920365268" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>	
-    <script async defer src="https://buttons.github.io/buttons.js"></script>   
+    <script async defer src="https://buttons.github.io/buttons.js"></script>  
+	    <link rel="stylesheet" href="./login/login.css">
     <style>
+
       /* ---------------------------------------------------------
       ############################################################
       # MikroTik Port TCP/UDP Static Routing (Policy Based Routing)
@@ -53,19 +55,10 @@
       color:#ddd !important;
       text-decoration:none !important;
       }
-      .Menu{
-      width:100%;
-      border-bottom:1px solid #ccc;
-      height:100%;
-      padding-bottom: 15px;
-      margin-bottom: 10px;
-      font-weight:bold;
-      }
       #wrap{
-      width:900px;
+      max-width:900px;
       margin:0 auto;
-      padding:10px;
-      font-size:15px; 
+      padding:0 5px 0  5px;
       }
       .header{
       height:auto; 
@@ -79,7 +72,7 @@
       }     
       .content{
       float:left;
-      width:auto;
+      width:100%;
       height:480px;
       padding: 10px;
       border-top:1px solid #bbb; 
@@ -90,7 +83,7 @@
       .sidebar{
       float:left;
       width:auto;
-      height:510px;
+      height:100%;
       padding: 10px;
       background-color:#ccc;
       border:2px solid #ccc; 
@@ -131,42 +124,6 @@
       clear:both;
       width:auto;
       padding-bottom:13px;
-      }
-      .menu1 {
-      width:360px;
-      margin-bottom:1px;
-      font-weight:bold;
-      background-color:#4CAF50;
-      padding:6px;
-      color:white;
-      display: inline-block;
-      margin:0;
-      }
-      .menu1 a:link {
-      text-decoration:none;
-      color:white;
-      }
-      .menu1 a:visited{
-      text-decoration:none;
-      color:white;
-      }
-      .menu2 {
-      width:300px;
-      margin-bottom:1px;
-      font-weight:bold;
-      background-color:#bbb;
-      padding:6px;
-      color:white;
-      display: inline-block;
-      margin:0;
-      }
-      .menu2 a:link{
-      text-decoration:none;
-      color:white;
-      }
-      .menu2 a:visited{
-      text-decoration:none;
-      color:white;
       }
       button {
       background-color: #ff6600;
@@ -218,42 +175,18 @@
       input[type=submit]:hover {
       background-color: #45a049;
       }
-      .col-25 {
-      float: left;
-      width: 25%;
-      margin-top: 6px;
-      }
-      .col-75 {
-      float: left;
-      width: 75%;
-      margin-top: 6px;
-      }
       /* Clear floats after the columns */
       .row:after {
       content: "";
       display: table;
       clear: both;
       }
-      .list-game {
-      height: 200px;
-      background:white;
-      overflow: scroll;
-      overflow-x: hidden;
-      width: 100%;
-      margin-top:2px;
-      padding: 3px;
-      border: 1px solid rgba(0,0,0,0.25);
-      }
-      .list-game label {
-      padding: 0;
-      display: inline-block;
-      } 
       .list-output-content {
       height: 425px;
       background:#f9f9f9;
       overflow: auto;
       overflow-x: auto;
-      width: 850px;
+      width: 100%;
       padding: 4px;
       margin-top:0px;
       border: 1px solid #bbb;
@@ -278,68 +211,123 @@
       background:#ddd;
       text-align:center;
       }
+      .myImage{padding:0;margin:0}
+	  .mikrotik-logo {display:none}
+	  .input-menu {display:flex}
+      @media screen and (max-width:700px) {
+	  .input-menu {display:block}
+      .list-output-content{height:auto}
+      .main-wrap{display:block}
+      .sidebar,.content{border-radius:5px;display:block;width:100%}
+      .sidebar{height:auto;margin-bottom:5px}
+      .header h1{max-width:100%;justify-content:center}
+      .header {border:none}
+      .logo-left a{margin-top:10px!important;font-size:23px}
+      .logo-left img{height:40px;width:50px;margin-top:-5px!important}
+      h1{font-size:21px;text-align:center}
+      .mymenu{width:100%!important}
+      .logo{width:100%}
+      .logo-left{justify-content:center;display:flex;width:100%}
+      .logo-right{justify-content:center;width:100%;display:flex}
+      .footer{font-size:13px;padding-left:5px;padding-right:5px}
+      }
+      @media screen and (max-width:600px) {
+	  button{margin-bottom:5px;}
+      h1{font-size:19px}
+      .logo-left a{margin-top:10px!important;font-size:20px}
+      .logo-left img{height:auto;width:40px;margin-top:-5px!important}
+      .sidebar{padding:10px}
+      .mikrotik-logo{display:flex;justify-content:center;margin-top:15px}
+      .show-homepage-menu{display:flex;justify-content:center;width:100%;clear:both}
+      .mymenu{padding-left:0;padding-right:0}
+      .mymenu ul{background:none!important;justify-content:center;display:flex}
+      }
+      @media screen and (max-width:500px) {
+      .show-homepage-menu{display:flex;justify-content:center;width:100%}
+      .avatar{display:none}
+      }
+      @media screen and (max-width:350px) {
+      .hide-homepage{display:none}
+      }   
     </style>
-    <link rel="stylesheet" href="./login/login.css">
+
   </head>
   <body>
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-auth.js"></script>   
     <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v12.0&appId=379827522913428&autoLogAppEvents=1" nonce="Esvux9Cl"></script>   
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v12.0&appId=379827522913428&autoLogAppEvents=1" nonce="Esvux9Cl"></script>    <div id="wrap">
     <div id="mymenu" class="mymenu">
+      <div class="mikrotik-logo" >
+        <img alt="mikrotik" src="./img/made-for-mikrotik.png">
+      </div>
       <ul>
         <li><a target="_blank" href="https://buananetpbun.github.io">HOME</a></li>
         <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
         <li><a href="javascript:callmodal()">DONATE</a></li>
-        <li><a target="_blank" href="https://fb.me/buananetmikrotik">CONTACT</a></li>
+        <li><a target="_blank" href="https://fb.me/buananet.pbun">CONTACT</a></li>
       </ul>
-      <div id="homepage" class="hide">
-        <button style="width:100px !important; padding:6px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
-		<button id="ShowProfile" style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px;" onclick="location.href = 'https://buananetpbun.github.io/login'">My Profile</button>
-        <span class="avatar">
+      <div class="show-homepage-menu">
+        <div id="homepage" class="hide">
+          <button style="width:90px !important; padding:6px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
+          <button id="ShowProfile" style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px;" onclick="location.href = 'https://buananetpbun.github.io/login'">My Profile</button>
+          <span class="hide-homepage">
+          <span class="avatar">
           <img alt="avatar" id="myavatar" src="https://user-images.githubusercontent.com/42666125/199234814-c320e1fc-da95-489e-a955-43b82e3f4b46.png" >
-         </span>		
-        <span style="font-weight:normal;font-size:14px">Hi, <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
-        <span style="font-weight:normal; font-size:14px"> [<span id="email_Verified" title="E-mail verified status" style="cursor: help;"></span>]</span>
-        
+          </span>		
+          <span style="font-weight:normal;font-size:14px">Hi, <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
+          <span style="font-weight:normal; font-size:14px"> [<span id="email_Verified" title="E-mail verified status" style="cursor: help;"></span>]</span>
+          </span>
+        </div>
       </div>
     </div>
-    <div id="wrap">
       <div class="logo">
-        <a href="https://buananetpbun.github.io/mikrotik-port-static-routing.html"><img style="float:left; margin-top:-10px;margin-right:10px" height="40" width="50" src="./img/mylogo.png"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a>  
-        <div style="float:right">
-          <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
+        <div class="logo-right" style="float:right;">
+          <div style="float:right">
+            <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
+          </div>
+          <div style="float:right; margin-right:5px; margin-top:1px">
+            <div  class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
+          </div>
         </div>
-        <div style="float:right; margin-right:5px; margin-top:3px">
-          <div  class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
+        <div class="logo-left" style="float:left;"> 
+          <a href="https://buananetpbun.github.io/mikrotik-port-static-routing.html"><img style="float:left; margin-top:-6px;margin-right:10px" height="40" width="50" src="./img/mylogo.png"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a>  
         </div>
       </div>
+      <div style="clear:both"></div>
       <div class="header">
         <h1>MIKROTIK <span style="color:#ff6600 !important">PORT TCP/UDP STATIC ROUTING</span> (POLICY BASED ROUTING)</h1>
       </div>
       <div class="sidebar">
-        <div style="width:240px;float:left">
+	  <div class="input-menu">
+
+        <div style="width:100%;margin-right:10px">
           <label>Routing Option</label> 
-          <select style="font-size:15px; width:220px; margin-right:10px" onchange="myFunction()" id="dns-list">
+          <select onchange="myFunction()" id="dns-list">
             <option value="01">Only Port Mangle Routing</option>
             <option value="02">Port To IP Routing Use RAW</option>
             <option value="03">Port To IP Routing Use Filter</option>
           </select>
         </div>
-        <div style="width:240px;float:left"><label>Target IP Gateway ISP / VPN</label> 
-          <input  type="text" id="target-ip" style='width:220px; margin-right:5px' placeholder="192.168.2.1" value="">
-        </div>
-        <div style="width:240px; float:left">
-          <label>Routing Mark / Routing Table</label>  
-          <input  type="text" id="target-route" style='width:220px' placeholder="browsing-route" value="">
-        </div>
-        <div style="width:130px; float:left">
+        <div style="width:100%;margin-right:10px">
           <label>ROS Version</label>  <br>
-          <select style="font-size:15px; width:130px; margin-right:10px" onchange="myFunction()" id="ros-list">
+          <select onchange="myFunction()" id="ros-list">
             <option value="ros6">ROS v6.xx</option>
             <option value="ros7">ROS v7.xx</option>
           </select>
+        </div>	
+
+
+        <div style="width:100%;margin-right:10px">
+		<label>IP Gateway ISP / VPN</label> 
+          <input  type="text" id="target-ip" placeholder="192.168.2.1" value="">
         </div>
+        <div style="width:100%">
+          <label>Routing Mark / Table</label>  
+          <input  type="text" id="target-route" placeholder="browsing-route" value="">
+        </div>
+
+		</div>
         <div style="margin-bottom:10px;clear:both"></div>
         <div class="list-output-content" style="margin-bottom:10px">
           <div id="cont">
