--- a/mikrotik-port-static-routing.html
+++ b/mikrotik-port-static-routing.html
@@ -190,7 +190,8 @@
       padding: 4px;
       margin-top:0px;
       border: 1px solid #bbb;
-      border-radius:5px
+      border-radius:5px;
+	  white-space:nowrap;
       }
       table, tr, td {
       border: none;
@@ -219,7 +220,7 @@
       .list-output-content{height:auto}
       .main-wrap{display:block}
       .sidebar,.content{border-radius:5px;display:block;width:100%}
-      .sidebar{height:auto;margin-bottom:5px}
+      .sidebar{height:auto;margin-bottom:5px; padding:5px}
       .header h1{max-width:100%;justify-content:center}
       .header {border:none}
       .logo-left a{margin-top:10px!important;font-size:23px}
