--- a/mikrotik-port-static-routing.html
+++ b/mikrotik-port-static-routing.html
@@ -219,8 +219,8 @@
 	  .input-menu {display:block}
       .list-output-content{height:auto}
       .main-wrap{display:block}
-      .sidebar,.content{border-radius:5px;display:block;width:100%}
-      .sidebar{height:auto;margin-bottom:5px; padding:5px}
+      .sidebar,.content{border-radius:5px;display:block;width:100%;padding:5px}
+      .sidebar{height:auto;margin-bottom:5px; }
       .header h1{max-width:100%;justify-content:center}
       .header {border:none}
       .logo-left a{margin-top:10px!important;font-size:23px}
