--- a/mikrotik-port-static-routing.html
+++ b/mikrotik-port-static-routing.html
@@ -36,7 +36,7 @@
       width:100%;
       margin-top: 0px;
       padding:0;
-      line-height: 1.2;
+      line-height: normal;
       background: #292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat ;  
       color:#333;
       }
