--- a/mikrotik-port-static-routing.html
+++ b/mikrotik-port-static-routing.html
@@ -219,7 +219,7 @@
 	  .input-menu {display:block}
       .list-output-content{height:auto}
       .main-wrap{display:block}
-      .sidebar,.content{border-radius:5px;display:block;width:100%;padding:5px}
+      .sidebar,.content{border-radius:5px;display:block;width:100%;}
       .sidebar{height:auto;margin-bottom:5px; }
       .header h1{max-width:100%;justify-content:center}
       .header {border:none}
@@ -237,7 +237,7 @@
       h1{font-size:19px}
       .logo-left a{margin-top:10px!important;font-size:20px}
       .logo-left img{height:auto;width:40px;margin-top:-5px!important}
-      .sidebar{padding:10px}
+      .sidebar{padding:7px}
       .mikrotik-logo{display:flex;justify-content:center;margin-top:15px}
       .show-homepage-menu{display:flex;justify-content:center;width:100%;clear:both}
       .mymenu{padding-left:0;padding-right:0}
