--- a/policy-based-routing-website.html
+++ b/policy-based-routing-website.html
@@ -186,7 +186,7 @@
           </div>
         </div>
         <div class="list-output-content">
-          <div id="cont"></div>
+          <div style="margin-bottom:10px" id="cont"></div>
           <table id="mytable" style="font-weight:normal">
             <tr style="background-color: #ddd; " >
               <td><button type="button" id="bt" onclick="submit()" >Generate Script</button>  <button style="margin-left:5px" id="copyscript" type="button" onclick="selectElementContents(document.getElementById('output'))">Copy All Script</button></td>
