--- a/mikrotik-port-static-routing.html
+++ b/mikrotik-port-static-routing.html
@@ -55,7 +55,7 @@
       input[type=submit]{background-color:#f60;color:#fff;padding:3px;border:none;border-radius:5px;cursor:pointer;float:right}
       input[type=submit]:hover{background-color:#45a049}
       .row:after{content:"";display:table;clear:both}
-      .list-output-content{height:300px;background:#f9f9f9;overflow:auto;overflow-x:auto;width:100%;padding:4px;margin-top:0;border:1px solid #bbb;border-radius:5px;white-space:nowrap}
+      .list-output-content{height:auto;background:#f9f9f9;overflow:auto;overflow-x:auto;width:100%;padding:4px;margin-top:0;border:1px solid #bbb;border-radius:5px;white-space:nowrap}
       table,tr,td{border:none}
       table{font-family:arial,sans-serif;border-collapse:collapse;width:100%}
       td,th{border:1px solid #ccc;text-align:left;padding:6px;font-weight:400}
