--- a/mikrotik-port-static-routing.html
+++ b/mikrotik-port-static-routing.html
@@ -65,7 +65,7 @@
       .input-menu{display:flex}
       @media screen and (max-width:700px) {
       .input-menu{display:block}
-      .list-output-content{height:auto}
+      .list-output-content{height:auto; min-height:300px}
       .main-wrap{display:block}
       .sidebar,.content{border-radius:5px;display:block;width:100%}
       .sidebar{height:auto;margin-bottom:5px}
