--- a/mikrotik-pcq-burst-rate-queue-size-generator.html
+++ b/mikrotik-pcq-burst-rate-queue-size-generator.html
@@ -143,8 +143,10 @@
       </div>
       <div class="main-wrap">
         <div class="sidebar">
-          <div style="width:100%;">
+          <div style="width:100%;border-bottom:1px solid #999;">
             <label><b>PCQ QUEUE SIZE</b></label>
+			</div>
+			<div style="width:100%;">
             <label>Total Client (Sub Queue)</label>
             <input type="text" id="total-client" style='color: Tomato' placeholder="40" value="40" onkeypress="return event.charCode != 32">
           </div>
@@ -152,7 +154,7 @@
             <label>Queue Size (Limit)</label>
             <input type="text" id="queue-size" style='color: Chocolate;' placeholder="50" value="50" onkeypress="return event.charCode != 32">
           </div>
-          <div style="width:100%;margin-top:10px">
+          <div style="width:100%;border-bottom:1px solid #999;margin-top:10px">
             <label><b>PCQ BURST RATE</b></label>
           </div>
           <div style="width:100%;">
